--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.1",
-    "expo": "^50.0.6",
+    "@react-navigation/native": "^6.1.17",
+    "expo": "^50.0.14",
     "expo-status-bar": "1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "^0.73.4",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "react-native-screens": "~3.29.0",
+    "react-native-safe-area-context": "4.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
